Corrected all the copy for the lessons

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 						<h2 class="page-title"> 1. Variables </h2>	
 						<div id="variables-text">					
 							<p class="page-text" id="variables-definition">
-								A symbol for a number or an element such a string of text that stores its value. Mostly descriptive about the value that it contains <br>	
+								A symbol for a number or an element in a string of text that expresses and stores its value. The variable is descriptive of the value it contains. <br>	
 								 x = 5 <br>									something = 20 <br> 
 								 something + x = 25 <br>
-								 Let's store the the value of one side of the square in a variable named "x" and see what happens when it gets resized. 
+								Let's store the the value of one side of the square in a variable named "x" and see what happens when it gets re-sized.
 							</p>						
 						</div>
 						<!--Here we insert our square-->
@@ -117,7 +117,7 @@
 						<h2 class="page-title"> 2. Variables and equations </h2>	
 						<div id="equations-text">					
 							<p class="page-text" id="equations-definition">
-								Now that we have learned about variables, let’s see the same principle in an equation with two different variables. <br> Each side of the square has a variable assigned. As we change the sizes of the squares, the values in our variables change, affecting the result.
+								Now that we have begun to learn about variables, let’s see the same principle in an equation with two different variables. <br> Each side of the square has a variable assigned. As we change the sizes of the squares, the values in our variables change, affecting the result.
 							</p>							
 						</div>
 						<!--Here we insert our two rectangles-->
@@ -141,7 +141,7 @@
 						<h2 class="page-title"> 3. Cartesian Plane</h2>	
 						<div id="cartesian-text">					
 							<p class="page-text" id="cartesian-definition">
-								Let's put aside our concepts of variables and equations which we will bring later and focus on the Cartesian plane.<br>
+								Let's put aside our concepts of variables and equations, which we will bring back later, and focus on the Cartesian plane.<br>
 								The Cartesian plane or Coordinate plane is a canvas that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can position elements on the canvas.
 							</p>							
 						</div>
@@ -164,8 +164,8 @@
 						<h2 class="page-title"> 4. Cartesian Plane II</h2>	
 						<div id="cartesian2-text">					
 							<p class="page-text" id="cartesian2-definition">
-								Now that we are familiar with the elements of the Coordinate Plane let's see how we place an element in the plane. <br> <br>
-								Click on the different markers to move the circle and how the position of the circle updates.
+								Now that we are familiar with the elements of the Coordinate plane let's see how we place an element in the plane. <br> <br>
+								Click on the different markers to move the circle and see how the position of the circle updates.
 								
 							</ul>							
 						</div>
@@ -190,8 +190,8 @@
 						<h2 class="page-title"> 5. Cartesian Plane on the Computer</h2>	
 						<div id="comp-text">					
 							<p class="page-text" id="comp-definition">
-								Once we have understood the behavior of the Cartesian Plane, it is important to distinguish it from the one in the computer. <br> <br>
-								In most frameworks, the Y axis is positive going downwards, and we usually only use one quadrant. Each coordinate is limited by a given pixel.
+								OOnce we understand the behavior of the Cartesian plane, it is important to see how its behavior differs – its variation -- when used in many computer graphing and coding contexts. <br> <br>
+								In most “computerese” frameworks, the Y axis is positive going downwards, and we typically use only one quadrant. Each coordinate is limited by a given pixel.
 							</p>							
 						</div>						
 						<div class="canvas-container" id="comp-container">	
@@ -214,9 +214,9 @@
 						<h2 class="page-title"> 6. Drawing Elements on the Screen</h2>	
 						<div id="circle-text">					
 							<p class="page-text" id="circle-definition">
-								Different elements can be drawn on the Cartesian Plane on the screen. <br> <br>
+								Different elements can be drawn on the Cartesian plane on the screen. <br> <br>
 
-								When Drawing a circle, besides a given X and Y position, we have to determine a radius. Given a variable called radius we give it a value to determine its size. Use the circle handler to change its radius value.
+								When drawing a circle, beside a given X and Y position, we have to determine a radius. Given a variable called radius, we give it a value to determine its size. Use the circle handler to change its radius value.
 							</p>							
 						</div>						
 						<div class="canvas-container" id="circle-container">	
@@ -263,8 +263,8 @@
 						<h2 class="page-title"> 8. Circle Y position</h2>	
 						<div id="circley-text">					
 							<p class="page-text" id="circley-definition">
-								Following the previous example, given a radius and a X position, we can drag the circle along the X axis and see how the value changes.<br> <br>
-								On the next lesson we will introduce a new property for the circle.
+								Following the previous example, given a radius and an X position, we can drag the circle along the X axis and see how the value changes.<br> <br>
+								In the next mini lesson we will introduce a new property for the circle.
 							</p>							
 						</div>						
 						<div class="canvas-container" id="circley-container">	
@@ -289,7 +289,7 @@
 						<div id="circle-color-text">					
 							<p class="page-text" id="circle-color-definition">
 								Now that we know the behavior of the circle given X and Y coordinates, let's keep customizing by giving it a color.<br> <br>
-								Like it was explained in the first lessons, variables allow us to store any type of information, in this case a string of color.
+								As explained in prior lessons, variables allow us to store any type of information, in this case a string of color.
 							</p>							
 						</div>						
 						<div class="canvas-container" id="circle-color-container">	
@@ -314,7 +314,7 @@
 						<h2 class="page-title"> 10. Drawing multiple elements</h2>	
 						<div id="multiple-text">					
 							<p class="page-text" id="multiple-definition">
-								After learning of different types of variables and how to draw elements in the Cartesian Plane, we can start using this concepts to create compositions.<br>								
+								At this point, you have used and shown understanding of basic knowledge of the Cartesian plane, variables, and simple equations. Stay tuned for more lessons!<br>								
 							</p>							
 						</div>						
 						<div class="canvas-container" id="multiple-container">	
