Changed the text font

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<h2 class="page-title"> 3. Cartesian Plane</h2>	
 						<div id="cartesian-text">					
 							<p class="page-text" id="cartesian-definition">
-								Let's put aside our concepts of variables and equations, which we will bring back later, and focus on the Cartesian plane.<br>
+								Let's put aside our concepts of variables and equations, which we will bring back later, and focus on the Cartesian plane.<br> <br>
 								The Cartesian plane or Coordinate plane is a canvas that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can position elements on the canvas.
 							</p>							
 						</div>
