Finished buttons styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	    <title> codeMath </title>
 	    <link rel="icon" href="favicon.ico" type="image/x-icon">
  		<link rel="shortcut icon" href="file://localhost/Users/mauriciosanchezduque/Documents/codeMath/favico.ico" type="image/x-icon">
+ 		<!--Open Sans-->
+ 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	    <!-- Style Sheet -->	    
 	    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 	    <link href="css/style.css" rel="stylesheet">
@@ -40,10 +42,10 @@
 				</div>
 				<nav class="collapse navbar-collapse menu-container bs-navbar-collapse" role="navigation" >
 					 <ul class="navbar-nav nav" id="menu">
-						<li class="menu-items" data-menuanchor="firstPage">  <a href="#firstPage">  what's <span id="brand"> code Math </span> ? </a></li>
-						<li class="menu-items" data-menuanchor="secondPage"> <a href="#secondPage">  trajectory  </a> </li>
-						<li class="menu-items" data-menuanchor="thirdPage">  <a href="#thirdPage">  framework </a> </li>
-						<li class="menu-items" data-menuanchor="fourthPage"> <a href="#fourthPage">  contact </a> </li>
+						<li class="menu-items" data-menuanchor="firstPage">  <a href="#firstPage" class="menu-a" id="menu-1">  what's <span id="brand"> code Math </span> ? </a></li>
+						<li class="menu-items" data-menuanchor="secondPage"> <a href="#secondPage" id="menu-2" class="menu-a">  trajectory  </a> </li>
+						<li class="menu-items" data-menuanchor="thirdPage">  <a href="#thirdPage" class="menu-a" id="menu-3">  framework </a> </li>
+						<li class="menu-items" data-menuanchor="fourthPage"> <a href="#fourthPage" class="menu-a" id="menu-4">  contact </a> </li>
 					</ul>
 				</nav>
 			</div>			
