Added toggle to the bottom bar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 				<nav class="collapse navbar-collapse menu-container bs-navbar-collapse" role="navigation" >
 					 <ul class="navbar-nav nav" id="menu">
-						<li class="menu-items" data-menuanchor="firstPage">  <a href="#firstPage" class="menu-a" id="menu-1">  what's <span id="brand"> code Math </span> ? </a></li>
+						<li class="menu-items" data-menuanchor="firstPage">  <a href="#firstPage" class="menu-a" id="menu-1">  what's code Math  ? </a></li>
 						<li class="menu-items" data-menuanchor="secondPage"> <a href="#secondPage" id="menu-2" class="menu-a">  trajectory  </a> </li>
 						<li class="menu-items" data-menuanchor="thirdPage">  <a href="#thirdPage" class="menu-a" id="menu-3">  framework </a> </li>
 						<li class="menu-items" data-menuanchor="fourthPage"> <a href="#fourthPage" class="menu-a" id="menu-4">  contact </a> </li>
@@ -339,7 +339,7 @@
 						<div id="conclusion-text">					
 							<p class="page-text" id="conclusion-definition">
 								At this point you must have a basic knowledge of the cartesian plane, variables and simple equations.<br> <br>
-								Stay tuned for more lessons!				
+								Stay tuned for more lessons! 			
 							</p>							
 						</div>													
 					</article>
@@ -352,11 +352,9 @@
 			    <div class="controlArrow next" >
 			    	<img id="arrow-forward" width="60" height="60" src="images/navigation_arrow_forward.svg"> </img>
 			    </div>
-			    <!-- This adds navigation dots to the screen-->
-			    <div class="fullPage-slideNav bottom">
-			   
-			    </div>
-				
+			    <img src="images/toggle_icon.svg" id="toggle-icon"> </img>
+			
+			
 			</section>
 
 			<!-- <section id="contact-top">
