Cursor for first two exercises

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 								<ul id="equations-canvas-text">
 									<li id="equations-rectangle-1"> var x = 50; </li>
 									<li id="equations-rectangle-2">  var y = 30; </li>
-									<li id="equations-result"> </li>
+									<li id="equations-result">x + y = 80; </li>
 								</ul>
 							</code>								
 							</ul>
@@ -361,7 +361,10 @@
 			<section> -->
 			<section class="section" id="contact" data-anchor="fourthPage">
 				<article class="what-content container">
-					<h2 class="page-title"> contact </h2>
+					<h2 class="page-title" id="contact-title"> contact </h2>
+					<p class="contact-text-element" id="contact-text"> If you want to know more about Code Math reach us at: </p> <br>
+					<img class="contact-text-element" src="images/contact.svg" id="email-contact"> <img>
+
 				</article>
 			</section>
 
