Cursors for the first two exercises, trying to add text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <title> codeMath </title>
-	    <link rel="icon" href="favicon.ico" type="image/x-icon">
+	    <link rel="icon" href="images/logo2.ico" type="image/x-icon">
  		<link rel="shortcut icon" href="file://localhost/Users/mauriciosanchezduque/Documents/codeMath/favico.ico" type="image/x-icon">
  		<!--Open Sans-->
  		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
