Fixed the toggle for the bottom nav bar

--- a/index.html
+++ b/index.html
@@ -352,8 +352,9 @@
 			    <div class="controlArrow next" >
 			    	<img id="arrow-forward" width="60" height="60" src="images/navigation_arrow_forward.svg"> </img>
 			    </div>
-			    <img src="images/toggle_icon.svg" id="toggle-icon"> </img>
-			
+			    <div id="toggle-container">
+			    	<img src="images/toggle_icon.svg" id="toggle-icon"> </img>
+				</div>
 			
 			</section>
 
